--- a/djangojs/templates/djangojs/django_js_init.html
+++ b/djangojs/templates/djangojs/django_js_init.html
@@ -1,7 +1,7 @@
 {% load js %}
-<script type="text/javascript" src="{% url "django_js_init" %}"></script>
+<script type="text/javascript" src="{% url "django_js_init" %}?chromesucks={% now "U" %}"></script>
 {% if js.i18n %}
-<script type="text/javascript" src="{% url "js_catalog" %}"></script>
+<script type="text/javascript" src="{% url "js_catalog" %}?chromesucks={% now "U" %}"></script>
 {% endif %}
 <script>
     window.DJANGO_JS_CSRF = {% if js.csrf %}true{% else %}false{% endif %};
